# DeskCleaner

./: .clang-format  CMakeLists.txt
sources/include/: mainwindowviewmodel.h
sources/resources/: resource.qrc
sources/resources/qml/: mainwindow.qml
sources/src/: desktopIconManager.cpp  desktopIconManager.h  main.cpp  mainwindowviewmodel.cpp
